# GraphicsBoilerplate

./: .gitmodules  CMakeLists.txt  asdf.cpp  lib.h  static_lib.cpp
hello_library/: CMakeLists.txt  shared_lib.cpp
resources/: simple_frag.glsl  simple_vert.glsl
src/: main.cpp
